# ia-indata-agency

./: CONTEXT.md  HOWTO.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ETL Diario — MEMO.yml  ETL_Diario_MEMO  backfill.yml  backfill_hosteleria.yml  energia_mercados_hosteleria.yml  retail-prueba-main.yml  run_daily.yml
_template/: .env.example  .gitignore  README.md  app.py  backfill.yml.example  requirements.txt  spec.md
_template/etl/: backfill.py  ingest_base.py
_template/sql/: 01_bronze.sql  02_silver.sql  03_gold_views.sql
_template/tests/: test_etl.py
docs/: AGENT.md  ModelContextProtocol.md  Spec.MD  Workflows.MD  skill-analytics-engineering.md  skill-powerbi-visualization.md
projects/energia-mercados/: .env.example  .gitignore  README.md  app.py  requirements.txt  spec.md  workflow_memo_daily.yml
projects/energia-mercados-hosteleria/: .env.example  app.py  hosteleria_daily.yml  requirements.txt  spec.md
projects/energia-mercados-hosteleria/etl/: ingest_aceite.py  ingest_gas.py  ingest_ipc.py  ingest_pvpc.py  run_daily.py
projects/energia-mercados-hosteleria/sql/: 01_schema_and_gold.sql
projects/energia-mercados/etl/: backfill.py  ingest_energia.py  ingest_ipc.py  ingest_macro.py  ingest_mercados.py  run_daily.py
projects/energia-mercados/sql/: 01_schema_and_gold.sql
projects/energia-mercados/test/: test_memo.py
projects/retail-prueba/: .env  .env.example  .gitignore  PLAN.md  README.md  app.py  dashboard-mock.html  requirements.txt  spec.md  template-guidelines.md
(+17 files in other folders)
